k3s/10-api-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: api-stripprefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /api/listings
      - /api/analytics
