k3s/12-grafana-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-stripprefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /grafana
