k3s/04-listing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: listing-service
spec:
  selector:
    app: listing-service
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listing-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: listing-service
  template:
    metadata:
      labels:
        app: listing-service
    spec:
      containers:
      - name: listing-service
        image: localhost:5000/listing-service:latest
        ports:
        - containerPort: 3000
