k3s/05-analytics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
spec:
  selector:
    app: analytics-service
  ports:
    - protocol: TCP
      port: 6001
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
      - name: analytics-service
        image: localhost:5000/analytics-service:latest
        ports:
        - containerPort: 3001
