k3s/07-metabase.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase-service
spec:
  selector:
    app: metabase
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
      - name: metabase
        image: metabase/metabase:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: metabase-storage
          mountPath: /metabase-data
      volumes:
      - name: metabase-storage
        persistentVolumeClaim:
          claimName: metabase-pvc
