k3s/09-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plotlisting-api-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-api-stripprefix@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /api/listings
        pathType: Prefix
        backend:
          service:
            name: listing-service
            port:
              number: 6000
      - path: /api/analytics
        pathType: Prefix
        backend:
          service:
            name: analytics-service
            port:
              number: 6001
