k3s/13-grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/grafana`)
      kind: Rule
      services:
        - name: grafana-service
          port: 3000
      middlewares:
        - name: grafana-stripprefix
