k3s/14-metabase-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: metabase-ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/metabase`)
      kind: Rule
      services:
        - name: metabase-service # Make sure your Metabase service is named this
          port: 3000
      middlewares:
        - name: metabase-stripprefix
