k3s/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: main-ingress-route
spec:
  entryPoints:
    - web
  routes:
    # Rule for Metabase with high priority
    - match: PathPrefix(`/metabase`)
      kind: Rule
      priority: 15
      services:
        - name: metabase-service
          port: 3000
      middlewares:
        - name: metabase-stripprefix
          namespace: default

    # Rule for Grafana with medium priority
    - match: PathPrefix(`/grafana`)
      kind: Rule
      priority: 10
      services:
        - name: grafana-service
          port: 3000
      middlewares:
        - name: grafana-stripprefix
          namespace: default

    # Fallback rule for the frontend with the lowest priority
    - match: PathPrefix(`/`)
      kind: Rule
      priority: 5
      services:
        - name: frontend
          port: 80
